# ChangeLog for dev-python/icalendar
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/icalendar/ChangeLog,v 1.42 2014/08/10 21:12:06 slyfox Exp $

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> icalendar-2.2.ebuild,
  icalendar-3.5.ebuild, icalendar-3.7.ebuild, icalendar-3.8.2.ebuild:
  QA: drop trailing '.' from DESCRIPTION

*icalendar-3.8.2 (27 Jul 2014)

  27 Jul 2014; Ian Delaney <idella4@gentoo.org> +icalendar-3.8.2.ebuild,
  -icalendar-3.8.1.ebuild:
  bump, rm prior -3.8.1

*icalendar-3.8.1 (22 Jul 2014)

  22 Jul 2014; Ian Delaney <idella4@gentoo.org> +icalendar-3.8.1.ebuild,
  -icalendar-3.6.1.ebuild, -icalendar-3.6.2.ebuild:
  bump, rm old

  06 Jul 2014; Michał Górny <mgorny@gentoo.org> icalendar-3.5.ebuild,
  icalendar-3.6.1.ebuild, icalendar-3.6.2.ebuild, icalendar-3.7.ebuild:
  Clean up obsolete dependencies on virtual/python-argparse and virtual/python-
  unittest2 (those packages were only required for <=python-2.6).

*icalendar-3.7 (07 Jun 2014)

  07 Jun 2014; Ian Delaney <idella4@gentoo.org> +icalendar-3.7.ebuild,
  -icalendar-3.1.ebuild, -icalendar-3.2-r1.ebuild, -icalendar-3.2.ebuild,
  -icalendar-3.3.ebuild, -icalendar-3.4.ebuild:
  bump, drop py2.6 pypy2_0, add pytest as testrunner, tidy, rm some old

*icalendar-3.6.2 (09 May 2014)

  09 May 2014; Patrick Lauer <patrick@gentoo.org> +icalendar-3.6.2.ebuild:
  Bump

  16 Apr 2014; Ian Delaney <idella4@gentoo.org> icalendar-3.6.1.ebuild:
  add py3 support, fixes Bug #507560

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> icalendar-3.3.ebuild,
  icalendar-3.4.ebuild, icalendar-3.5.ebuild, icalendar-3.6.1.ebuild:
  Add support for the new PyPy slotting.

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> icalendar-3.5.ebuild:
  amd64 stable, bug #450172

  24 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> icalendar-3.5.ebuild:
  x86 stable wrt bug #450172

*icalendar-3.6.1 (28 Jan 2014)
