@@ -12,16 +12,18 @@ DIST icalendar-2.2.tar.gz 152855 SHA256 58974feeb8a6f8daf14fa8b093eb90a1aca4dff5
 DIST icalendar-3.5.tar.gz 59780 SHA256 2fc1094896b9dcdfc87b5c07ec4a4dd3b65b70c1650e91884eff96ccb9e89ea9 SHA512 e2b105f3dcfed5de2c63600dfc76eb328a27302a921e34b95026a7bec9b1322c5bb9a46b3a2fa0d0e8659a0f6e1ff4432e20665ae15c11b804194f87b088a115 WHIRLPOOL 0e9b107f5f3c8209633bfdc20ea88867999f109669328052f5cb464e0062bebb5b3f2d747c431cf4ca7d7d4550531cc9b6477bd87e7991eb4a1e7862220501e1
 DIST icalendar-3.7.tar.gz 63205 SHA256 0eb5e5625a6ac3d46cbbd87ca00828c5fb9412b66fdaa3f28eaebd28b40a82e5 SHA512 3afea2bf465a3025ba230ab904973b9c814306195b5636b2694b444808fbf0e28b47d2b6d328906b32beb4b313c897491fa7de23aa3f596936a2c067f506e848 WHIRLPOOL 9a68c32d65e9f0e9a134d44678f14f2d443b65c72607de7aac0429e358a2979fd9e50541ff90e4dbf785b16a0165ddd54387f5f9ea835dd242d1d512f8ee576b
 DIST icalendar-3.8.2.tar.gz 64546 SHA256 4252daaccabb4903c9d96397aa392ef58374c0f762b710e30de9c0a7cae3dcbb SHA512 df729be93faa656f5cb40ebbd8402d4793dcc9b2ef80f89abcec0527740002268f8ed6c53c8e372a3b36e436e530873dbb7e8995b648dcba0a32f08382b7165c WHIRLPOOL c08c71f22cfa7f963afbcb00e68a0bbe5656783efc9be38ff807e97cb3d92d2e6a3a9ece8e4d7b76c6ad39cb043c7e84e5b5256c323ba696f607830de4ffdbe9
+DIST icalendar-3.8.3.tar.gz 64885 SHA256 41949b09031611799136e019168b84eb5ed899c8e4e692117d2d38504659fd16 SHA512 7f84af60a141a2c975b98879a159b1a7ba0b1248384ac9898b6451e91b12310a62db1fa0b1ed9bfea629594ee81a4914a8d10babb33710b1c9d01f9760366bbb WHIRLPOOL 117928dead09556547a3f7b14ef284cfef38b75fbe0767bbfb58f49cc9be20b02d62d6a22e85d7f2c80065321e163314ced7f537cfd88df6bf7baf5a57b872fd
 EBUILD icalendar-2.2.ebuild 957 SHA256 99844bfff3ff6c130e0dea73a9b5862121b83c9b4c2c66cb8fe7d6d9102e1ee7 SHA512 7825cbf3560f788fcf2d7a79972daef1699f25e26a35c86e1fcfe552ccab20e8980d3d19740fca58dca70903e78f8896d9787eaef21104c7c2609d862f721d0f WHIRLPOOL 724354b5fbe95d43fe95318c07b38c4b733ffcce1786552e6611acde4baf462bd4f465780edf4620c8b93dad0fef0bf6745e47f4e89a85897484414f47c6e539
 EBUILD icalendar-3.5.ebuild 1025 SHA256 33dce394808dfb739e7ae2cfe661de050506c005bd601cc784f698b215725ad6 SHA512 b0ab2d3d1ee0bf4b3bd39ea14a8ef9b4833c4c658039d07395683f05745d50f58b9e2ec90b94d7b56215353829ae5f8f5d81bd14d632b179e8710ce38d1a57f1 WHIRLPOOL 3612dcd52fde73278fa1ec7b5a27e627a55bace96112cd4346d0449c4ad25f73e28771fb019ce6abfdc469a8b93b41278d948567d4f1c72f9bdfb39db3073ab7
 EBUILD icalendar-3.7.ebuild 1189 SHA256 7aa5e7045f2c40fc71efd1ab9a8906051f2a2211e8b580a3e8398c1b973371fa SHA512 81b3e08254b12d51c2e17d177c108d587a4580289a2f9de3b438e6c841778c25625363c19f93073e1426bc6cfd3f972eb32baaab3eb57257c32e4ee1754c98b0 WHIRLPOOL 9796f1bdbdd22be564df3863d0e6be21031f5ce5c3371bf0c19bd53f19b3d00951316e69095821bdd0ffc1d7d5363b3b5dcbf09bf3bd70a22c1f555bb63beffc
 EBUILD icalendar-3.8.2.ebuild 1191 SHA256 bd81b377ae672916779610e1af69aec796daed602c0d4f452c4767b818893d7b SHA512 196ce5a6a19ee9c50404db81c8911898632eb205a7400dd5dd16f8ce2c0293885b727024016aae9f7dba07a9756523d6489c85252bec2a17badefd23bb313917 WHIRLPOOL 2a4bc45f371d282b213731c62d97e6d74e516952f79934ec11f6ba1c8dac64b881e1339c7bc9e1aef318f7485d7d201522814273b72cb2222a66ecb956e5e4f1
-MISC ChangeLog 7039 SHA256 211f41f68caeac26e38c328166ff3a9a07445b50ff1b71298f53e3026c05dbcc SHA512 a0329999bc1ca897684938eb5a2832732a031b45cae056d2f19bd29d1414e45dedce309a4c6588a416e7c780871142e526023706b4217b931a3051c6c9850679 WHIRLPOOL 7c04cdb28d62cace3561822e3c29c2c0dfb4bb97a04b325ba19f9e3045b9323c0dd6cc38dbc8b207ca0928e352bea8792cd936c8d8d2c961e3ea2ce61af0945f
+EBUILD icalendar-3.8.3.ebuild 1192 SHA256 151885f978956189a8e00e4783a1a7645d4998903f0b494b35215f17324c50e2 SHA512 6a030ea16c2dc6f3f6c812e89f8cd9ccd9ca3b6ef1c43cbbef423fc10602e4c5897119eadc193f7898031bfed895c838734d1f65fd7c5f7c76d9e0119fa7f79d WHIRLPOOL 789f97ca517e8325187b82ca1eb08474611fe39d83504f563cabad00104f01033c4d881169d95ccaa2d25ec681fd2424aa884ad91c5d6c1e31021c2ab3537762
+MISC ChangeLog 7153 SHA256 4eaefe0c88e5f7853987202eec4233975a26f0facee5c118b3d84d0db1f95267 SHA512 b9dffb55c141d1cb08f1e990431052066e9424ed8e175c0821acad5dddf7c0d5836054f3ddce0c2129e6ed43adfeb65a2467db8506af8d178c82dd34a2f259e2 WHIRLPOOL ec884f1f839578f1fcbbe30beac411b2cbd7efacf903d8b0a47042b4b3d81dfebf2e8695d5b8a27efc09b9fa8b3aa9637c3fca8ab786df29c71ae3b202d4211e
 MISC metadata.xml 321 SHA256 0ba2111890eba6d641b11c1c317efb09976174095c9d45099e0a5c8f37e8866e SHA512 a4c0046d1aec788e94c6d1dce9736c87891e51a3632dfdbda9928ad4aa226f019fd6ba2c6629f2cf10a12644f8a7f709d91a2c7474985354ff98ce6a708a7800 WHIRLPOOL f0816a2297bb8ac48376ac410d1badf57c1cdc2f1bde65eddabea0f5e7603046d3fad81fede26b3156aaf452c51ddb363629ae38e41556f7cd75bc170342bfb7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlPn4CcACgkQcaHudmEf86pEKwCfXsGwQEF4yCcFmGmTnq5nFoFs
-2k0AoIDvdTrpfJlwkiCe25iFJWOzVb9C
-=29me
+iEYEAREIAAYFAlQOpAYACgkQso7CE7gHKw3rrQCdGGw9qyX2nS96UAT3dMu88nYn
+138AnAtfhz3UckH1C5ENWF0shCjJ1B2W
+=ftgS
 -----END PGP SIGNATURE-----
